Fix spacing for error messages

--- a/app/assets/stylesheets/account.scss
+++ b/app/assets/stylesheets/account.scss
@@ -37,10 +37,6 @@
     justify-content: space-evenly;
 }
 
-.errors-div {
-    height: 0;
-    margin-top: 1rem;
-}
 
 .update-email-form {
     font-family: $body-font;
