--- a/app/assets/stylesheets/session.scss
+++ b/app/assets/stylesheets/session.scss
@@ -6,6 +6,7 @@
     flex-direction: column;
     align-items: center;
     font-family: $body-font;
+    margin-top: 3rem;
 
     label {
         font-family: inherit;
@@ -43,12 +44,6 @@
     }
     
 }
-
-.errors-li {
-    text-align: center;
-    color: #d11a2a;
-}
-
 
 
 .login-form-div {
@@ -111,8 +106,7 @@
 }
 
 .signup-form-div {
-
-    
+    width: 350px;
 
     h2 {
         text-align: center;
@@ -123,11 +117,16 @@
 
 .errors-ul {
     height: 35px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+}
 
+.errors-div {
+    height: 0;
+    margin-top: 1rem;
+}
+
+.errors-li {
+    text-align: center;
+    color: #d11a2a;
 }
 
 @media (max-width: 480px) {
